tests/react_no_jsx_intrinsics/react_no_jsx_intrinsics.exp
Error: test.js:5
  5: <div />;
     ^^^^^^^ React element. Could not resolve name

Error: test.js:5
  5: <div />;
      ^^^ React element `div`. Could not resolve name

Error: test.js:5
  5: <div />;
      ^^^ React key. Could not resolve name

Error: test.js:5
  5: <div />;
      ^^^ React ref. Could not resolve name


Found 4 errors
